<package format="2">
    <name>Pointcloud Flattening</name>
    <version>1.0.0</version>
    <description>
        <p>WIP</p>

    </description>
    <author>Sabrina Button</author>
    <maintainer email="sabrina.button@queensu.ca" />
    <license>TBD</license>

    <buildtool_depend>ament_cmake</buildtool_depend>
    <buildtool_depend>ament_cmake_python</buildtool_depend>
    <depend>rclcpp</depend>
    <depend>std_msgs</depend>
    <depend>sensor_msgs</depend>
    <depend>pcl_ros</depend>
    <depend>pcl_conversions</depend>
    <exec_depend>ros2launch</exec_depend>
    <exec_depend>launch_ros</exec_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
  